--- a/roadrunner-resource-hub-frontend/src/student_resources/pages/styling/StudentResources.css
+++ b/roadrunner-resource-hub-frontend/src/student_resources/pages/styling/StudentResources.css
@@ -1,15 +1,19 @@
-
+html{
+    overflow-x: hidden;
+}
 .welcome-container{
     display: flex;
-    justify-content: space-around;
+    justify-content:center;
     align-items: center;
     flex-wrap: wrap;
+    height: fit-content;
 }
 
 .welcome-container h1{
     font-size: 2.5rem;
     margin: 1rem;
     padding: 1rem;
+
 }
 
 .page-welcometext{
